# kokkos-fortran-interop

./: .gitignore  .jenkins  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: CI.yml  Intel.yml
ci/: flcl-ci-darwin-ppc.sh  flcl-ci-darwin-x86.sh  flcl-ci-darwin.sh  flcl-run-ci-darwin-ppc-gcc-7.3.0-serial.sh  flcl-run-ci-darwin-ppc-gcc-7.4.0-cuda-10.1-kokkos-3.0.00-cuda-debug.sh  flcl-run-ci-darwin-ppc-gcc-7.4.0-cuda-10.1-kokkos-3.0.00-cuda-release.sh  flcl-run-ci-darwin-ppc-gcc-7.4.0-cuda-10.1-kokkos-3.1.01-cuda-debug.sh  flcl-run-ci-darwin-ppc-gcc-7.4.0-cuda-10.1-kokkos-3.1.01-cuda-release.sh  flcl-run-ci-darwin-ppc-gcc-7.4.0-kokkos-3.0.00-cuda-debug.sh  flcl-run-ci-darwin-ppc-gcc-7.4.0-kokkos-3.0.00-cuda-release.sh  flcl-run-ci-darwin-ppc-gcc-7.4.0-kokkos-3.0.00-openmp-debug.sh  flcl-run-ci-darwin-ppc-gcc-7.4.0-kokkos-3.0.00-openmp-release.sh  flcl-run-ci-darwin-ppc-gcc-7.4.0-kokkos-3.0.00-serial-debug.sh  flcl-run-ci-darwin-ppc-gcc-7.4.0-kokkos-3.0.00-serial-release.sh  flcl-run-ci-darwin-ppc-gcc-7.4.0-kokkos-3.1.01-cuda-debug.sh  flcl-run-ci-darwin-ppc-gcc-7.4.0-kokkos-3.1.01-cuda-release.sh  flcl-run-ci-darwin-ppc-gcc-7.4.0-kokkos-3.1.01-openmp-debug.sh  flcl-run-ci-darwin-ppc-gcc-7.4.0-kokkos-3.1.01-openmp-release.sh  flcl-run-ci-darwin-ppc-gcc-7.4.0-kokkos-3.1.01-serial-debug.sh  flcl-run-ci-darwin-ppc-gcc-7.4.0-kokkos-3.1.01-serial-release.sh  flcl-run-ci-darwin-ppc-gcc-9.3.0-cuda-11.0-kokkos-3.3.01-cuda-debug.sh  flcl-run-ci-darwin-ppc-gcc-9.3.0-cuda-11.0-kokkos-3.3.01-cuda-release.sh  flcl-run-ci-darwin-ppc-gcc-9.3.0-cuda-11.2-kokkos-3.3.01-cuda-debug.sh  flcl-run-ci-darwin-ppc-gcc-9.3.0-cuda-11.2-kokkos-3.3.01-cuda-release.sh  flcl-run-ci-darwin-ppc-gcc-9.3.0-kokkos-3.3.01-cuda-debug.sh  flcl-run-ci-darwin-ppc-gcc-9.3.0-kokkos-3.3.01-cuda-release.sh  flcl-run-ci-darwin-ppc-gcc-9.3.0-kokkos-3.3.01-openmp-debug.sh  flcl-run-ci-darwin-ppc-gcc-9.3.0-kokkos-3.3.01-openmp-release.sh  flcl-run-ci-darwin-ppc-gcc-9.3.0-kokkos-3.3.01-serial-debug.sh  flcl-run-ci-darwin-ppc-gcc-9.3.0-kokkos-3.3.01-serial-release.sh  flcl-run-ci-darwin-ppc-gcc-cuda-3.0.sh  flcl-run-ci-darwin-ppc-gcc-cuda-3.1.1.sh  flcl-run-ci-darwin-ppc-gcc-cuda-debug-3.0.sh  flcl-run-ci-darwin-ppc-gcc-cuda-debug-3.1.1.sh  flcl-run-ci-darwin-ppc-gcc-cuda.sh  flcl-run-ci-darwin-ppc-gcc-openmp-3.0.sh  flcl-run-ci-darwin-ppc-gcc-openmp-3.1.1.sh  flcl-run-ci-darwin-ppc-gcc-openmp-debug-3.0.sh  flcl-run-ci-darwin-ppc-gcc-openmp-debug-3.1.1.sh  flcl-run-ci-darwin-ppc-gcc-openmp.sh  (+265 more)
cmake/: flclConfig.cmake.in
examples/: CMakeLists.txt  README.md
examples/01-axpy/: CMakeLists.txt  Makefile  axpy-cxx.cc  axpy-f.f90  axpy-main.F90  axpy-main.f90
examples/01-axpy-ndarray/: CMakeLists.txt  axpy-ndarray-cxx.cc  axpy-ndarray-f.f90  axpy-ndarray-main.F08  axpy-ndarray-main.F90
examples/02-axpy-dualview/: CMakeLists.txt  axpy-dualview-cxx.cc  axpy-dualview-f.f90  axpy-dualview-main.F90
examples/03-axpy-view/: CMakeLists.txt  axpy-view-cxx.cc  axpy-view-main.F90
examples/04-complex-ndarray/: CMakeLists.txt  complex-ndarray-cxx.cc  complex-ndarray-f.f90  complex-ndarray-main.F90
examples/05-complex-dualview/: complex-dualview-cxx.cc  complex-dualview-f.f90  complex-dualview-main.F90
examples/0X-complex-dualview/: CMakeLists.txt  complex-dualview-cxx.cc  complex-dualview-f.f90  complex-dualview-main.F90
scripts/: Dockerfile.gcc  Dockerfile.hipcc  Dockerfile.nvcc
src/: flcl-cxx.cc  flcl-cxx.cpp  flcl-cxx.hpp  flcl-dualview-f.f90  flcl-f.f08  flcl-f.f90  flcl-ndarray-f.f08  flcl-ndarray-f.f90  flcl-types-cxx.hpp  flcl-types-f.f90  flcl-util-cxx.cc  flcl-util-cxx.cpp  flcl-util-cxx.h  flcl-util-cxx.hpp  flcl-util-f.f90  flcl-util-kokkos-f.f90  flcl-util-strings-f.f90  flcl-view-f.f90
test/: CMakeLists.txt  flcl-test-cxx.cpp  flcl-test-cxx.h  flcl-test-f.F90  flcl-test-f.f90  old-test-flcl-main.f90  test-flcl-cxx.cc  test-flcl-cxx.cpp  test-flcl-cxx.h  test-flcl-f.f90  test-flcl-main.f90  test_from_ndarray_c32_1d.f90  test_from_ndarray_c32_2d.f90  test_from_ndarray_c32_3d.f90  test_from_ndarray_c32_4d.f90  test_from_ndarray_c32_5d.f90  test_from_ndarray_c32_6d.f90  test_from_ndarray_c32_7d.f90  test_from_ndarray_c64_1d.f90  test_from_ndarray_c64_2d.f90  test_from_ndarray_c64_3d.f90  test_from_ndarray_c64_4d.f90  test_from_ndarray_c64_5d.f90  test_from_ndarray_c64_6d.f90  test_from_ndarray_c64_7d.f90  test_from_ndarray_i32_1d.f90  test_from_ndarray_i32_2d.f90  test_from_ndarray_i32_3d.f90  test_from_ndarray_i32_4d.f90  test_from_ndarray_i32_5d.f90  test_from_ndarray_i32_6d.f90  test_from_ndarray_i32_7d.f90  test_from_ndarray_i64_1d.f90  test_from_ndarray_i64_2d.f90  test_from_ndarray_i64_3d.f90  test_from_ndarray_i64_4d.f90  test_from_ndarray_i64_5d.f90  test_from_ndarray_i64_6d.f90  test_from_ndarray_i64_7d.f90  test_from_ndarray_l_1d.f90  (+209 more)
